<resources>
    <string name="app_name">Project Neptune</string>
    <string name="drawer_open">OpenDrawer</string>
    <string name="drawer_close">CloseDrawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_contexts">Contexts</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_next">Next</string>
    <string name="nav_waiting">Waiting</string>
    <string name="nav_scheduled">Scheduled</string>
    <string name="nav_someday">Someday</string>
    <string name="nav_settings">Settings</string>
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string-array name="nav_item_titles">
        <item>Inbox</item>
        <item>Contexts</item>
        <item>Next</item>
        <item>Waiting</item>
        <item>Scheduled</item>
        <item>Someday</item>
        <item>Settings</item>
    </string-array>

    <string-array name="nav_item_toolbar_titles" >
        <item>Inbox</item>
        <item>Contexts</item>
        <item>Next</item>
        <item>Waiting</item>
        <item>Scheduled</item>
        <item>Someday</item>
        <item>Settings</item>
    </string-array>

    <string-array name="status_names" >
        <item>Inbox</item>
        <item>Next</item>
        <item>Waiting</item>
        <item>Scheduled</item>
        <item>Someday</item>
    </string-array>

    <string-array name="color_titles">
        <item>Emerland</item>
        <item>Peterriver</item>
        <item>Amethyst</item>
        <item>Wetasphalt</item>
        <item>Carrot</item>
        <item>Alizarin</item>
        <item>Clouds</item>
        <item>Asbestos</item>
    </string-array>
</resources>
